# expaloma

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: checkpoint_layout.md
docs/plans/: handoff.md
scripts/: benchmark_infer.py  convert_weights.py  gen_golden.py
src/expaloma/: __init__.py  cli.py  featurize.py  infer.py  padding.py  paths.py
src/expaloma/nn/: __init__.py  config.py  layers.py  model.py  qeq.py
src/expaloma/weights/: README.md  espaloma_v0_0_8.eqx
tests/: conftest.py  test_equivalency.py  test_packaging_data.py  test_padding.py  test_qeq.py  torch_reference_forward.py
tests/data/espaloma_golden/: aspirin_charges.npy
tests/stubs/dgl/: __init__.py
tests/stubs/dgl/nn/pytorch/conv/: __init__.py  sageconv.py
