[project]
name = "expaloma"
version = "0.1.0"
description = "JAX/Equinox port of espaloma-charge partial charge inference (bundled v0.0.8 weights)"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Marielle Russo", email = "67157875+maraxen@users.noreply.github.com" }
]
requires-python = ">=3.11"
keywords = ["jax", "equinox", "espaloma", "partial-charges", "rdkit", "chemistry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "equinox>=0.13.6",
    "jax>=0.9.2",
    "numpy>=2.4.4",
    "rdkit>=2026.3.1",
    "typer>=0.24.1",
]

[project.scripts]
expaloma = "expaloma.cli:run"

[project.urls]
Homepage = "https://github.com/maraxen/expaloma"
Repository = "https://github.com/maraxen/expaloma"
Issues = "https://github.com/maraxen/expaloma/issues"

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.11.6,<0.12"]
build-backend = "uv_build"
